@@ -1346,5 +1346,5 @@ DATA:
 SPECS:
     n_absolute: true
     wavelength_vacuum: true
-    film_thickness: monolayer
+    film_thickness: 1L
     substrate: SiO2/Si
